Optimize column gaps and fix max height of catalog tile list
Allows to scroll the catalog tile list (left side) only without
scrolling the map (right side). Makes dragging tiles on the bottom of
the tile list more convenient.

The max-height value is calculated from the navbar height and the column
gap (top padding) plus some extra padding.

Fixes issue #8.

--- a/style/bulma.scss
+++ b/style/bulma.scss
@@ -1,6 +1,7 @@
 @charset "utf-8";
 
 // Update some of Bulma's component variables
+$box-padding: 0.75rem;
 $navbar-breakpoint: 0;
 
 // Import only what we need from Bulma
